media/boom-assets/css/boom.assets.css.less
/* BOOM ASSETS */
/* The filter by name input box */
.b-filter-input {
	margin-left: 40px;
	margin-top: 5px;
	width: 200px;
}

#b-assets {
	&-view {
		&-thumbs {
			background: #7f7f7f;
			width: 100%;
		}

		/* View asset info list - type, filesize, etc. */
		dl {min-width: 300px;}
		dd {margin-left: 150px; }
		dt {
			float: left;
			min-width: 150px;
			font-weight: bold;
		}
		dd, dt {
			margin-bottom: 1em;
		}

		textarea {
			height: 2.6em;
		}

		.ui-tabs .ui-tabs-panel {
			padding: 1.8em 1.4em;
		}
	}

	&-buttons {
		float: left;
	}

	&-content {
		overflow: hidden;
	}

	&-manager {
		.b-assets-back {
			display: none;
		}

		select {
			margin-left: 40px;
		}

		#b-tags-search {
			display: inline-block;
			margin-left: 40px;
			vertical-align: top;
			max-width: 300px;

			ul {
				float: left;
				width: 100%;
			}

			span.ui-icon-boom-tag {
				display: inline-block;
				vertical-align: top;
				margin-top: 15px;
			}

			.b-filter-input {
				margin-left: 0;
			}

			.b-tags-list {
				margin: 0;

				li {
					margin: 0 5px;
					display: inline-block;

					a {
						display: inline-block !important;
					}

					span {
						margin-left: 0;
					}
				}
			}
		}
	}

	&-filters {
		padding-left: 3px;

		input, select {
			height: 24px;
			font-size: 1.2em;
			vertical-align: top;
			width: 250px;
			margin-top: 15px;
		}

		select {
			width: 150px;
			margin-top: 19px;
		}
	}

	&-view-thumbs {
		overflow: hidden;
		padding-left: 3px;

		> div {
			padding: 0.5em;
			padding-left: 0;
			display: inline-block;
			position: relative;
			overflow: hidden;
		}

		.selected .thumb {
			opacity: 0.3;
		}

		.thumb {
			width: 100%;
			height: 100%;
			max-height: 100%;
			position: relative;
			padding: 0;

			a {
				display: block;
			}

			input {
				z-index: 0;
				position: absolute;
				top: 0;
				left: 0;
			}

			img {
				position: relative;
				z-index: 1;
			}

			a, img {
				width: 100%;
				height: 100%;
				max-height: 100%;
			}

			.b-asset-details {
				max-height: 0px;
				position: absolute;
				bottom: 0;
				left: 0;
				right: 0;
				background: #ffd200;
				color: black;
				font-size: 1.1em;
				line-height: 1.4em;
				height: 100%;
				z-index: 2;
				overflow: hidden;

				-webkit-transition: all 1s ease-in;
				-moz-transition: all 1s ease-in;
				-ms-transition: all 1s ease-in;
				-o-transition: all 1s ease-in;
				transition: all 1s ease-in;

				h1 {
					text-align: center;
				}

				h1, p {
					padding: 5px;
				}

				img.type {
					width: 16px;
					height: 16px;
				}
			}

			&:hover, &:focus, &:active {
				.b-asset-details {
					font-weight: normal;
					max-height: 100%;

					-webkit-transition: all 1s ease-out;
					-moz-transition: all 1s ease-out;
					-ms-transition: all 1s ease-out;
					-o-transition: all 1s ease-out;
					transition: all 1s ease-out;
				}
			}
		}
	}

	&-filters {
		background: #7f7f7f;
		color: #ffffff;
	}

	&-pagination, &-stats {
		line-height: 64px;
		display: inline-block;
		vertical-align: top;
		float: right;
		margin-right: 2em;
		font-size: 1.3em;
	}

	&-pagination {
		min-width: 370px;

		select {
			margin: 20px 0 0 2em;
			float: right;
		}
	}

	/* Styling for the 'no assets found' message when the asset manager returns no assets */
	&-none {
		font-weight: bold;
		font-size: 20pt;
		text-align: center;
		margin-top: 15%;
	}
}

.b-assets- {
	&-preview {
		width: 170px;
		float: left;
		margin: 0 .8em 1em 1em;

		&:hover img {
			border-color: #444;
		}

		img {
			background-color: transparent;
			display: block;
			padding: 5px;
			cursor: pointer;
			display: block;
			width: 160px;
			-moz-box-shadow: 3px 3px 3px #bbb;
			-webkit-box-shadow: 3px 3px 3px #bbb;
			box-shadow: 3px 3px 3px #bbb;
		}
	}

	&view-attributes {
		width: 45%;
	}
}

#b-assets-view-thumbs .ui-state-active {
	background: #d6278e;
}

#b-topbar.b-asset-manager {
	#boom-page-user-menu {
		float: right;
	}
}

.b-assets-dialog {
	& .b-items-box-header {
		background: #000000;
	}

	/* Hide certain elements when the asset manager is opened in a dialog. */
	#b-topbar {
		display: none;
	}

	#b-assets {
		&-manager {
			.b-assets-back {
				display: block;
			}
		}

		&-filters, &-view-thumbs {
			background: none;
			padding-left: 0;
		}
	}

	.ui-dialog-buttonpane {
		padding: 1em;
		padding-right: 0.5em;
		margin-right: 2em;
		position: relative;

		button {
			position: relative;
			z-index: 1;
		}
	}

	.center {
		position: absolute;
		left: 0;
		width: 100%;
		overflow: hidden;
		text-align: center;

		#b-assets-pagination, #b-assets-stats {
			float: none;
		}
	}
}

